fix beastieselect filter on mobile

--- a/src/shared/Shared.module.css
+++ b/src/shared/Shared.module.css
@@ -312,6 +312,12 @@
   gap: 4px;
 }
 
+.beastieSelectOptions {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
 .beastieSelect {
   display: flex;
   flex-wrap: wrap;
